RESOLVED FIXED105761
Fix build warning in OSAllocatorPosix.cpp
https://bugs.webkit.org/show_bug.cgi?id=105761
Summary Fix build warning in OSAllocatorPosix.cpp
Gyuyoung Kim
Reported 2012-12-26 01:38:13 PST
Clean up build warning. Source/WTF/wtf/OSAllocatorPosix.cpp:37:7: warning: unused parameter ‘usage’ [-Wunused-parameter] Source/WTF/wtf/OSAllocatorPosix.cpp:37:7: warning: unused parameter ‘writable’ [-Wunused-parameter] Source/WTF/wtf/OSAllocatorPosix.cpp:37:7: warning: unused parameter ‘executable’ [-Wunused-parameter] Source/WTF/wtf/OSAllocatorPosix.cpp:37:7: warning: unused parameter ‘includesGuardPages’ [-Wunused-parameter]
Attachments
Patch (1.37 KB, patch)
2012-12-26 01:39 PST, Gyuyoung Kim
no flags
Gyuyoung Kim
Comment 1 2012-12-26 01:39:19 PST
Kentaro Hara
Comment 2 2012-12-26 02:17:37 PST
Comment on attachment 180735 [details] Patch ok
WebKit Review Bot
Comment 3 2012-12-26 02:28:33 PST
Comment on attachment 180735 [details] Patch Clearing flags on attachment: 180735 Committed r138474: <http://trac.webkit.org/changeset/138474>
WebKit Review Bot
Comment 4 2012-12-26 02:28:37 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.