Fix build warning in OSAllocatorPosix.cpp https://bugs.webkit.org/show_bug.cgi?id=105761

Reviewed by Kentaro Hara.

* wtf/OSAllocatorPosix.cpp:
(WTF::OSAllocator::reserveUncommitted): Fix unused param warnings.


Canonical link: https://commits.webkit.org/123958@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@138474 268f45cc-cd09-0410-ab3c-d52691b4dbfc